- GObservations::remove_response_cache(string&) - Remove response cache for model
- GObservation::remove_response_cache(string&) - Remove response cache for model
- GSkyDir::precess() - Precess sky position to epoch
- GSkyDir::sun() - Set sky position of Sun
- GSkyDir::moon() - Set sky position of Moon
- GSkyDir::rotate() - Rotate sky direction (radians variant)
- GSkyMap::extract() - Extract section of sky map
- GModelSpatial::flux() - Extract flux from sky region
- GCTAObservation::remove_response_cache(string&) - Remove response cache for model
- GCTAResponse::remove_response_cache(string&) - Remove response cache for model
- GCTAResponseCache::remove(string&) - Remove response cache for model
- GCOMObservation::drm(GModels&) - Compute model cube
- GCOMObservation::remove_response_cache(string&) - Remove response cache for model
- GCOMTim::save(GFilename&, bool&) - Save TIM into FITS file
- GCOMTim::write(GFitsBinTable&) - Write TIM into FITS binary table
- GCOMDri::cone_content() - Get DRI content within event cone 

The following methods have been removed:
- none

The following methods have been renamed:
- GInstDir::hash() - Returns a cached value

The arguments for the following methods have been changed:
- GTime::utc(int&) - Add optional precision value

The return value of the following methods has been changed:
- none


3. Configuration
-----------------
The order of the Python module imports was changed since there were some issues
with type casting with the present order. This is some side effect of how SWIG
handles type casting among multiple modules.


4. Application module
---------------------
None


5. Base module
--------------
None


6. FITS I/O Interface
---------------------
None


7. Linear algebra module
------------------------
None


8. Model module
---------------
The method GModelSpatial::flux() was added that extracts the flux by integrating
over a specific sky region. For the moment only circular sky regions are
implemented (#2961).

