@@ -35,6 +35,7 @@ The following methods have been added:
 - GSkyDir::sun() - Set sky position of Sun
 - GSkyDir::moon() - Set sky position of Moon
 - GSkyDir::rotate() - Rotate sky direction (radians variant)
+- GSkyDir::GSkyDir(GVector&) - Sky direction vector constructor
 - GSkyMap::extract() - Extract section of sky map
 - GModelSpatial::flux() - Extract flux from sky region
 - GCTAObservation::remove_response_cache(string&) - Remove response cache for model
